[#169647021] added loading page fixed loading page to be shown on top of other components instead of change route to show loading page fixed context adding isVisible property to show/hide loading page fixed comments changed properties of Loading page as optionals except isVisible fixed ScrollToTop to scroll to top of page in case of error (to show alert)

--- a/src/components/LoadingPage/LoadingPage.css
+++ b/src/components/LoadingPage/LoadingPage.css
@@ -1,5 +1,9 @@
 .LoadingPage {
     text-align: center;
+    z-index: 1040;
+    position: absolute;
+    top: 0;
+    width: 100%;
 }
 .LoadingPage .custom-background-container {
     background-image: linear-gradient(270deg, #0066CC 26%, #0C00D3 78%);
